# logg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
doc/: Doxyfile  Makefile
docs/: Doxyfile.in  Makefile  Readme.md
examples/: basic.cpp  save_log.cpp
lib/: CMakeLists.txt
lib/makepkg/: CMakeLists.txt  PKGBUILD.in
lib/pkgconfig/: CMakeLists.txt  liblogg.pc.in
src/: colors.hpp  formats.cpp  formats.hpp  io.cpp  io.hpp  liblogg.cpp  liblogg.hpp  liblogg.hpp.autosave  logdef.h  logdef.hpp  logg.h  logg.hpp  logger.c  logger.cpp  logger.h  logger.hpp  ops.c  ops.h  version.h.in  version.hpp.in
src/internal/: colors.hpp  formats.cpp  formats.hpp  io.cpp  io.hpp
test/: test.cpp
